--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,25 @@
 [package]
 name = "linear_type"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["Christian Thäter <ct@pipapo.org>"]
 description = "Linear types for rust"
 license = "MIT OR Apache-2.0"
 repository = "https://git.pipapo.org/cehteh/linear_type.git"
-keywords = ["typesystem", "cell"]
+keywords = ["typesystem", "cell", "linear"]
 categories = ["rust-patterns"]
+
+[features]
+compile_error = ["dep:no-panic"]
+
+[dependencies]
+no-panic = { version = "0.1.26", optional = true}
+
+[profile.dev]
+opt-level = 1
+
+[profile.release]
+lto = "thin"
 
 [badges]
 maintenance = { status = "actively-developed" }
