--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "linear_type"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 authors = ["Christian Thäter <ct@pipapo.org>"]
 description = "Linear types for rust"
 license = "MIT OR Apache-2.0"
 repository = "https://git.pipapo.org/cehteh/linear_type.git"
-keywords = ["typesystem", "cell", "linear"]
+keywords = ["typesystem", "cell"]
 categories = ["rust-patterns"]
 
 [features]
