FIX #2: add .get_ref() method under the `semipure` feature guard

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ rust-version = "1.60.0"
 [features]
 default = []
 drop_unchecked = []
+semipure = []
 
 [badges]
 maintenance = { status = "actively-developed" }
