--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "linear_type"
-version = "0.7.2"
+version = "0.8.0"
 edition = "2021"
 authors = ["Christian Thäter <ct@pipapo.org>"]
-description = "Linear types for rust"
+description = "Unique linear types for rust"
 license = "MIT OR Apache-2.0"
-repository = "https://git.pipapo.org/cehteh/linear_type.git"
+repository = "https://seed.pipapo.org/nodes/seed.pipapo.org/rad:z2HSXU1YYpbzTLp4LWXXL9j19rSnw"
 keywords = ["typesystem", "cell", "lineartype", "undropable", "nodrop"]
 categories = ["rust-patterns"]
-rust-version = "1.60.0"
+rust-version = "1.61.0"
 
 [features]
 default = []
